# xsoverlay-notifier

./: .gitignore  Cargo.toml  README.md  code_signing.crt  config.toml  install.ps1  pack.ps1  pack.sh  pack_and_run.ps1
.github/scripts/: build.ps1
.github/workflows/: package.yml
src/: config.rs  default_config.toml  main.rs  notif_handling.rs  tui.rs  xsoverlay.rs
windows-packaging/: AppxManifest.xml  AppxManifest_externalLocation.xml
