[package]
name = "xsoverlay_notifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
futures = "0.3.25"
miniserde = "0.1.28"
tokio = { version = "1.23.0", features = ["full"] }
tokio-stream = "0.1.11"
windows = { version = "0.43.0", features = [
  "UI_Notifications_Management",
  "Foundation_Collections",
  "ApplicationModel",
] }
