[package]
name = "xsoverlay_notifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
base64 = "0.20.0"
clap = { version = "4.0.32", features = ["derive"] }
crossterm = "0.25.0"
directories = "4.0.1"
futures = "0.3.25"
log = "0.4.17"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["full"] }
tokio-stream = "0.1.11"
tokio-util = { version = "0.7.4", features = ["rt"] }
toml = "0.7.0"
twelf = { version = "0.9.0", features = ["env", "clap", "toml"] }
windows = { version = "0.43.0", features = [
  "UI_Notifications_Management",
  "Foundation_Collections",
  "ApplicationModel",
  "Storage_Streams",
  "Graphics_Imaging",
] }
